--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "typecheck": "tsc --noEmit",
     "test": "sst load-config -- vitest run"
   },
+  "dependencies": {
+    "aws-sdk": "^2.1692.0",
+    "short-unique-id": "^5.2.2"
+  },
   "devDependencies": {
-    "aws-cdk-lib": "2.32.0",
-    "@serverless-stack/cli": "^1.9.4",
-    "@serverless-stack/resources": "^1.9.4",
-    "typescript": "^4.8.2",
-    "@tsconfig/node16": "^1.0.3",
-    "vitest": "^0.22.1"
+    "@types/aws-lambda": "^8.10.149",
+    "sst": "^2.48.5",
+    "@tsconfig/node22": "^22.0.1",
+    "aws-cdk-lib": "2.195.0",
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.5"
   },
   "workspaces": [
     "services"
